<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateFragment">


    <TextView
        android:id="@+id/decs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/desc"
        android:textSize="@dimen/ts" />

    <TextView
        android:id="@+id/agree_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/decs"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/agree_desc" />

    <RadioGroup
        android:id="@+id/agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/agree_desc"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/activity_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/agreement"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity" />

        <EditText
            android:id="@+id/activity_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/type_field"
        android:layout_below="@id/activity_field"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/type_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/type_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/types"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/participants_field"
        android:layout_below="@id/type_field"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/participants_desc"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participants"/>

        <NumberPicker
            android:id="@+id/participants_input"
            android:layout_width="wrap_content"
            android:layout_height="70dp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_below="@id/participants_field"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
</RelativeLayout>