<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

        <LinearLayout
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/keyField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_by_key"
                    android:textSize="@dimen/ts"/>
                <EditText
                    android:id="@+id/keyInput"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/ts"
                    />
            </LinearLayout>

            <Spinner
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/types"
                />

            <CheckBox
                android:id="@+id/load_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_image"
                android:textSize="@dimen/ts" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:onClick="search"
                />

            <io.github.kbiakov.codeview.CodeView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:id="@+id/res_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navbar_height"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_menu" />
</RelativeLayout>